--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: BDU İmtahana Giriş Balı Hesablama
-description: Bakı Dövlət Universiteti tələbələri üçün imtahana giriş balı hesablama sistemi
+description: BDU tələbələri üçün imtahana giriş balı hesablama sistemi
